# Calycopis-broker

./: AGENTS.md  README.md  pom.xml
adass/ADASS-2024/: 20241030-dmorris-poster.odg
agents/: unexpected-behaviour.mdc
attic/spring-openapi/: pom.xml
config/: database.yaml
docker/compose/: calycopis-compose.yml
docker/developer-tools/: Dockerfile
docker/fedora-base/: Dockerfile
docker/java-builder/: Dockerfile
docker/java-runtime/: Dockerfile
docs/ADASS-2024/: 20241017-01-poster-abstract.txt  20241030-dmorris-poster.odg
docs/poster/: ADASS-2023-ExecPlanner-poster.odg
examples/001/: 001-001-offerset-request.yaml  001-002-offerset-response.yaml  001-003-offerset-response.json  001-004-session-00-response.yaml  001-005-session-00-response.json  001-007-reject-00-response.yaml  001-008-session-01-response.yaml  001-009-session-01-response.json  001-011-accept-01-response.json  001-012-offerset-response.json  001-013-offerset-response.yaml  accept-01-response.json  offerset-final.json  offerset-final.yaml  offerset-request.yaml  offerset-response.json  offerset-response.yaml  reject-00-request.yaml  reject-00-response.yaml  session-00-response.json  session-00-response.yaml  session-01-response.json  session-01-response.yaml
examples/002/: 002-001-offerset-request.yaml  002-002-offerset-response.yaml  offerset-request.yaml  offerset-response.yaml
examples/003/: 003-001-offerset-request.json  003-002-offerset-response.json  offerset-request.json  (+1 more)
java/: .gitignore  pom.xml
openapi/impl/python/openapitools/fastapi/webapp-0.6/: setup.cfg
(+2545 files in other folders)
