[metadata]
name = openapi_server
version = 0.5
description = Prototype implementation of the IVOA ExecutionBroker interface 
long_description = file: README.md
keywords = OpenAPI IVOA ExecutionBroker
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
